--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.14.4",
+    "glyphicons-only-bootstrap": "^1.0.1",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "react": "^16.13.1",
